<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Base de Datos 2</string>
    <string name="action_settings">Settings</string>
    <string name="lblCodigo">C:</string>
    <string name="lblNombre">N:</string>
    <string name="btnInsert">INS</string>
    <string name="btnUpdate">UPD</string>
    <string name="btnDelete">DEL</string>
    <string name="btnConsulta">CONS</string>
    
</resources>
