<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCodigo" />

        <EditText
            android:id="@+id/txtCodigo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
        
        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblNombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <Button
        	android:id="@+id/btnInsert"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/btnInsert" />
        
        <Button
        	android:id="@+id/btnUpdate"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/btnUpdate" />
            
        <Button
        	android:id="@+id/btnDelete"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/btnDelete" />

        <Button
        	android:id="@+id/btnConsulta"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/btnConsulta" />

    </LinearLayout>

    <TextView
    	android:id="@+id/txtConsulta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>
